# instrument

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE  README.md  TAGS  cabal.project  default.nix  docker-compose.yml  hie.yaml  instrument.cabal  shell.nix  stack.yaml
examples/graphite/: storage-aggregation.conf
instrument/: CHANGELOG.md  default.nix  instrument.cabal  package.yaml
instrument-cloudwatch/: CHANGELOG.md  LICENSE  README.md  default.nix  instrument-cloudwatch.cabal  package.yaml
instrument-cloudwatch/scripts/: addSources.sh
instrument-cloudwatch/src/Instrument/: CloudWatch.hs
instrument-cloudwatch/test/: Main.hs
instrument-cloudwatch/test/Instrument/Tests/: CloudWatch.hs
instrument/examples/graphite/: storage-schemas.conf
instrument/src/: Instrument.hs
instrument/src/Instrument/: Client.hs  ClientClass.hs  Counter.hs  Measurement.hs  Sampler.hs  Types.hs  Utils.hs  Worker.hs
instrument/test/data/Instrument/Types/: Aggregated.safecopy.3  Payload.safecopy.0  Payload.safecopy.1  SubmissionPacket.safecopy.1
instrument/test/src/: Main.hs
instrument/test/src/Instrument/Tests/: Arbitrary.hs  Client.hs  Counter.hs  Types.hs  Utils.hs  Worker.hs
nix/: default.nix  sources.json  sources.nix
nix/haskell/: overlay.nix
src/: Instrument.hs
src/Instrument/: Client.hs  ClientClass.hs  Counter.hs  Measurement.hs  Sampler.hs  Types.hs  Utils.hs  Worker.hs
test/data/Instrument/Types/: Aggregated.safecopy.0  Aggregated.safecopy.1  Aggregated.safecopy.2  Stats.safecopy.0  SubmissionPacket.safecopy.0  SubmissionPacket.safecopy.1
test/src/: Main.hs
test/src/Instrument/Tests/: Client.hs  Types.hs  Utils.hs
