name:                instrument
version:             0.1.0.0
synopsis:            Easy stats/metrics instrumentation for Haskell programs
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc
category:            Data
build-type:          Simple
cabal-version:       >=1.8


library
  hs-source-dirs: src
  exposed-modules:     
    Instrument
    Instrument.Client
    Instrument.ClientClass
    Instrument.Counter
    Instrument.Measurement
    Instrument.Sampler
    Instrument.Types
    Instrument.Utils
    Instrument.Worker

  build-depends:       
      base >= 4.5 && < 5
    , array
    , time
    , transformers
    , mtl
    , hostname
    , hedis
    , text
    , bytestring
    , statistics
    , vector
    , containers
    , cereal
    , data-default
    , csv-conduit
    , unix
    , errors
    , network