name:                instrument
version:             0.3.0.0
synopsis:            Easy stats/metrics instrumentation for Haskell programs
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc
category:            Data
build-type:          Simple
cabal-version:       >=1.8


library
  hs-source-dirs: src
  exposed-modules:
    Instrument
    Instrument.Client
    Instrument.ClientClass
    Instrument.Counter
    Instrument.Measurement
    Instrument.Sampler
    Instrument.Types
    Instrument.Utils
    Instrument.Worker

  build-depends:
      base >= 4.5 && < 5
    , array
    , time
    , transformers
    , mtl
    , hostname
    , hedis
    , text
    , bytestring
    , statistics
    , vector
    , containers
    , cereal
    , data-default
    , csv-conduit
    , unix
    , errors
    , network
    , zlib          >= 0.6 && < 0.7
    , retry
    , exceptions

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -O0
  hs-source-dirs:
    test/src
  build-depends:
     base
   , data-default
   , hedis
   , HUnit
   , instrument
   , tasty
   , tasty-quickcheck
   , tasty-hunit
   , transformers
   , QuickCheck
