name:                instrument-cloudwatch
version:             0.1.0.0
synopsis:            Adds a worker for the instrument package that exports to Amazon CloudWatch
description:         Please see README.md
homepage:            http://github.com/soostone/instrument-cloudwatch#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael.xavier@soostone.com
copyright:           2015 Soostone Inc
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag lib-Werror
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Instrument.CloudWatch
  build-depends:       base >= 4.6 && < 5
                     , amazonka-cloudwatch >= 1.3.5 && < 2.0
                     , instrument >= 0.4.0.0
                     , lens >= 4.7 && < 5
                     , text
                     , time >= 1.4.2
                     , async >= 2.0.2 && < 2.2
                     , stm-chans >= 2.0 && < 4.0
                     , stm >= 2.4
                     , transformers
                     , amazonka >= 1.3.5 && < 2.0
                     , retry >= 0.7
                     , semigroups >= 0.5
                     , exceptions
                     , amazonka-core >= 1.3.5 && < 2.0
                     , containers
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Instrument.Tests.CloudWatch
  build-depends:       base
                     , instrument-cloudwatch
                     , tasty >= 0.10
                     , tasty-hunit >= 0.9
                     , stm
                     , stm-chans
                     , semigroups
                     , tasty-quickcheck >= 0.8.4
                     , QuickCheck
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/soostone/instrument-cloudwatch
